tests/paczka1/small_fuzzy/38019677.err
Error in line 8: A911 S82 5,3
Error in line 9: invBWTQMu A48 47,4
